<?xml version="1.0"?>
<package format="2">
  <name>upros_message</name>
  <version>0.0.1</version>
  <description>Dynamic reconfigure configuration package for class labs</description>

  <maintainer email="dash-wu@users.noreply.github.com">dash-wu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
</package>

